[package]
name = "cowsay"
authors = ["fffzlfk <fffzlfk@qq.com>"]
version = "0.1.0"
edition = "2021"
description = "Cowsay implemented using Rust."
homepage = "https://github.com/fffzlfk/cowsay"
repository = "https://github.com/fffzlfk/cowsay"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.1.2", features = ["derive"] }