[package]
name = "cowsay"
authors = ["aleksireede <aleksi.reede@gmail.com>"]
version = "0.1.1"
edition = "2023"
description = "Cowsay implemented using Rust.+amogus"
homepage = "https://github.com/aleksireede/cowsay-amogus"
repository = "https://github.com/aleksireede/cowsay-amogus"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.1.2", features = ["derive"] }
